<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_30sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_30sdp" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/_277sdp"
            android:layout_height="@dimen/_150sdp"
            android:src="@drawable/ic_weather_logo"
            android:layout_marginTop="@dimen/_100hsdp"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/helvetica_neue_medium"
            android:gravity="center_horizontal"
            android:text="Welcome Fetch Weather"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_25ssp"
            android:layout_marginTop="@dimen/_120hsdp"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toTopOf="@id/iv_logo" />

        <com.fetch.weather.ui.feature.widgets.AppEditText
            android:id="@+id/edt_display_name"
            android:layout_width="0dp"
            android:layout_height="@dimen/_62hsdp"
            app:hint="Please enter the name"
            android:layout_marginTop="@dimen/_50hsdp"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10hsdp"
            android:fontFamily="@font/helvetica_neue_regular"
            android:gravity="start"
            android:lineSpacingExtra="@dimen/_4ssp"
            android:layout_marginStart="5dp"
            android:textColor="@color/colorRedDB"
            android:textSize="@dimen/_10ssp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/edt_display_name"/>

        <com.fetch.weather.ui.feature.widgets.AppButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="@dimen/_56hsdp"
            android:layout_marginTop="@dimen/_45hsdp"
            android:enabled="false"
            android:text="Sign In"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toStartOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/edt_display_name" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>